better responsive buttons on list pages fix button overlapping with body text on list pages

--- a/excellalabs/static/css/_heros.scss
+++ b/excellalabs/static/css/_heros.scss
@@ -198,9 +198,8 @@
 
     .vertical_red_line {
         border-left: 4px solid $coral_red;
-        height: 118px;
+        height: 125px;
         display: inline-block;
-        margin-top: 10px;
         margin-left: 60px;
         margin-right: 60px;
     }
