--- a/excellalabs/static/css/excellalabs.scss
+++ b/excellalabs/static/css/excellalabs.scss
@@ -195,10 +195,6 @@ input {
 
 }
 
-.container {
-  padding-top: 75px;
-}
-
 .footer {
   background-color: #353535;
   padding: 4em 0;
